objects/SDO_SCOM_OOA_Approved_Domain__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approved Domains</relationshipLabel>
        <relationshipName>Approved_Domains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domains__c</fullName>
        <label>Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approved Domain</label>
    <nameField>
        <label>Approved Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>